[package]
name = "synaptechmetrics"
version = "0.1.0"
description = "Synaptech Metrics"
authors = ["James Wilson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synaptechmetrics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-blec = "0.5.3"
btleplug = "0.11.8"
rand = "0.9.1"
tokio = "1.45.0"
uuid = "1.16.0"
rosc = "0.11.4"
anyhow = "1.0.98"
